kubernetes/app-demo/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-demo
  namespace: app-demo
spec:
  type: ClusterIP
  selector:
    app: app-demo                 # roteia pra pods com este label
  ports:
    - port: 80                     # porta do Service
      targetPort: 8080            # porta do container
